--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
@@ -21,8 +22,8 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "web-vitals": "^2.1.4",
-    "typescript": "^4.9.5"
+    "typescript": "*",
+    "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
     "extends": [
